[ui] Fix lawsuit payment payee name too long

--- a/src/js/components/lawsuit-page/lawsuit-page.sass
+++ b/src/js/components/lawsuit-page/lawsuit-page.sass
@@ -111,7 +111,6 @@
         border: 1px solid $alto-color
 
         .payment-row
-          display: flex
           padding: 12px 16px 11px 16px
 
           &.payment-table-header, &.subtotals
@@ -134,14 +133,26 @@
             background-color: $alto-color
             font-weight: 500
 
+            .total-payments-label, .total-payments-value
+              display: inline-block
+
             .total-payments-label
-              flex-grow: 1
+              width: calc(100% - 140px)
 
             .total-payments-value
               width: 140px
 
+          .payee, .settlement, .legal-fees
+            display: inline-block
+            vertical-align: top
+
           .payee
-            flex-grow: 1
+            width: calc(100% - 300px)
+            padding-right: 8px
+            box-sizing: border-box
+            white-space: nowrap
+            overflow: hidden
+            text-overflow: ellipsis
 
           .settlement
             width: 160px
